Bug 1672700 - Make mozTextAccessible attribute getters use GeckoTextMarker. r=morgan

This allows `contenteditable` textboxes to work correctly with flattened text values.

The attribute setters, aside from AXValue, don't work in Chrome or Safari with aria textboxes,
so those are not a high priority. These include:
- AXSelectedText
- AXSelectedTextRange
- AXVisibleCharacterRange

In addition, AXVisibleCharacterRange's getter doesn't function as expected in Chrome or Safari either, so I didn't touch it.

Differential Revision: https://phabricator.services.mozilla.com/D97629